<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acyonix.musicalstructure.SettingsActivity"
    android:orientation="vertical">

    <TextView
        style="@style/activity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_label"/>

    <TextView
        android:text="@string/setting_activity_description"
        style="@style/view_style"/>

    <Button
        style="@style/view_style"
        android:text="@string/setting_1_tag"/>

    <Button
        android:text="@string/setting_2_tag"
        style="@style/view_style"/>

    <Button
        android:text="@string/setting_3_tag"
        style="@style/view_style"/>

</LinearLayout>
