<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.acyonix.musicalstructure.ShowMusicActivity">

    <TextView
        style="@style/activity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_music_activity_label"/>

    <TextView
        android:id="@+id/show_music_activity_textbox"
        style="@style/view_style"
        android:text="@string/show_music_activity_description"/>

    <Button
        android:id="@+id/song_1_button"
        style="@style/view_style"
        android:text="@string/song_1_tag"/>

    <Button
        android:id="@+id/song_2_button"
        style="@style/view_style"
        android:text="@string/song_2_tag"/>

</LinearLayout>
