<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acyonix.musicalstructure.PaymentActivity"
    android:orientation="vertical">

    <TextView
        style="@style/activity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_activity_label"/>
    
    <TextView
        android:id="@+id/payment_textview"
        style="@style/view_style"
        android:text="@string/payment_activity_description"/>

    <Button
        android:id="@+id/paid_button"
        style="@style/view_style"
        android:text="@string/paid_button_label"/>

</LinearLayout>
