<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acyonix.musicalstructure.ShopActivity"
    android:orientation="vertical">

    <TextView
        style="@style/activity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_activity_label"/>

    <TextView
        android:text="@string/shop_activity_description"
        style="@style/view_style"/>

    <Button
        android:id="@+id/shop_home_button"
        style="@style/home_button_style" />

    <Button
        android:id="@+id/buy_song_1_button"
        style="@style/view_style"
        android:text="@string/song_1_tag"/>

    <Button
        android:id="@+id/buy_song_2_button"
        style="@style/view_style"
        android:text="@string/song_2_tag"/>

</LinearLayout>
