<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.acyonix.musicalstructure.PlayMusicActivity">

    <Button
        android:id="@+id/view_all_songs_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/play_music_activity_textview"/>

    <Button
        android:id="@+id/equalizer_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/holo_orange_dark"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/holo_red_dark"/>

    <TextView
        android:id="@id/play_music_activity_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/play_music_activity_description"
        android:background="@android:color/holo_purple"
        app:layout_constraintVertical_weight="4"
        app:layout_constraintTop_toBottomOf="@id/view_all_songs_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/control_song_buttons"/>

    <Button
        android:id="@id/control_song_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/control_music_bar_description"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/play_music_activity_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_playlist_button"/>

    <Button
        android:id="@id/view_playlist_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/playlist_button"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/control_song_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
